# alfa-agent

./: .coveragerc  .gitignore  LICENSE-MIT  MANIFEST.in  README.rst  agent.py  collect_sysinfo.py  json_viewer.py  pyproject.toml  requirements.txt  setup.py
alfa_agent/: __main__.py  agent.py  cli.py
alfa_agent/core/: agentd.py
alfa_agent/core/api/survey/: survey.py
alfa_agent/core/api/system/: sysinfo.py  system.py
alfa_agent/core/api/util/: linux_util.py  util.py  windows_util.py
alfa_agent/core/base/command/: command_manager.py  fifo.py
alfa_agent/core/base/daemon/: custom_daemon.py
alfa_agent/core/base/messaging/: message_receiver.py  message_sender.py
alfa_agent/data/: sys_info.json
alfa_agent/data/conf/: agent.ini  config.yaml  logging.yaml
core/: agentd.py
core/api/survey/: survey.py
core/api/system/: sysinfo.py  system.py
core/api/util/: util.py  windows_util.py
core/base/command/: command_manager.py  fifo.py
core/base/daemon/: custom_daemon.py
core/base/messaging/: message_receiver.py  message_sender.py
