[metadata]
name = 'alfa-agent'
version = '0.0.1'
description = 'Agent service for ALFA migration management and information system.'
author = 'Emre Akkaya'
author_email = 'emre.akkaya@agem.com.tr'
license = 'MIT'
url = 'https://github.com/Agem-Bilisim/alfa-agent'

[requires]
python_version = ['3.5', '3.6', 'pypy3']

[build-system]
requires = ['setuptools', 'wheel']

[tool.hatch.commands]
prerelease = 'hatch build'
